# kilocode_template

./: .env.example  .gitignore  .kilocodemodes  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.git-hooks/: commit-msg
.github/workflows/: ci.yml  python-tests.yml
.kilocode/: global_rules.md  mcp.json  mcp.optional.json
.kilocode/agent_rules/: api_contract_lawyer.md  backend_architect.md  env_linux_engineer.md  env_windows_engineer.md  git_specialist.md
.kilocode/mcp/: README.md
.kilocode/rules/: 01-language-and-interaction.md  02-naming-conventions.md  03-python-style.md  04-docs-and-diagrams.md  05-security-and-restricted-files.md  06-project-structure-and-local-docs.md  07-versioning-and-release.md  08-commits-and-changelog.md  09-testing-and-qa.md  memory-bank-instructions.md
.kilocode/rules-architect/: 00-mode-architect.md
.kilocode/rules-code/: 00-mode-code.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  coding_conventions.md  context.md  product.md  services_catalog.md  tasks.md  tech.md  tech_stack.md
.kilocode/workflows/: code-review.md  db-migration.md  diagnose-failures.md  docs-refresh.md  generate-openapi-client.md  project-setup-python.md  project-setup.md  release.md  security-scan.md  start-ticket.md  submit-pr.md  sync-fork.md  test-and-coverage.md  tools-health.md  update-memory-bank.md
app/api/: main.py
app/tests/: test_health.py
docs/adr/: 0001-record-architecture-decision.md  _template.md
docs/diagrams/: example.mmd
infra/alembic/: env.py
scripts/: git_hooks_setup.sh  k6_smoke.js  locustfile.py  setup_powershell.ps1  setup_zsh.sh
