[tool.poetry]
name = "kilocode-python-fullstack-template"
version = "0.1.0"
description = "Python full-stack template for KiloCode with CI gates"
authors = ["Your Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
psycopg = {version="^3.2.1", extras=["binary"]}
python-multipart = "^0.0.9"
prometheus-client = "^0.20.0"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
hypothesis = "^6.112.3"
bandit = "^1.7.9"
safety = "^3.2.6"
pip-audit = "^2.7.3"
schemathesis = "^3.37.4"
black = "^24.8.0"
ruff = "^0.6.9"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=xml --cov-report=html:artifacts/coverage_html --junitxml=artifacts/pytest_report.xml"
testpaths = ["app/tests"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["B", "C4", "I", "UP", "S"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
plugins = []
mypy_path = "app"
exclude = ["app/tests/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
